[gd_scene load_steps=13 format=3 uid="uid://cb16cuqo8h7mk"]

[ext_resource type="Texture2D" uid="uid://dqlbj7jxva735" path="res://sprites/hospital_var3.png" id="1_7jid2"]
[ext_resource type="Script" uid="uid://dc67o6nwswrcx" path="res://worlds/memory.gd" id="1_rwnrf"]
[ext_resource type="PackedScene" uid="uid://gt545m88xo40" path="res://prefabs/memory_manager.tscn" id="2_37m0f"]
[ext_resource type="Script" uid="uid://3mfuktwawp7d" path="res://scripts/sticker_scrollbar.gd" id="2_cxery"]
[ext_resource type="PackedScene" uid="uid://bn1gwdoilwgt2" path="res://prefabs/draggable_sticker.tscn" id="2_hjr63"]
[ext_resource type="PackedScene" uid="uid://qthvuvksqow3" path="res://prefabs/dialog_display_manager.tscn" id="2_hurhv"]
[ext_resource type="PackedScene" uid="uid://bkj473o2yxwtl" path="res://prefabs/memory_text.tscn" id="3_7jid2"]
[ext_resource type="Script" uid="uid://bkoyo31sqb8kt" path="res://scripts/data/sticker_data.gd" id="3_37m0f"]
[ext_resource type="PackedScene" uid="uid://dd8scxj0g6iwu" path="res://components/fader.tscn" id="5_x5ada"]
[ext_resource type="Resource" uid="uid://bbch84uppf4ud" path="res://resources/stickers/some_sticker.tres" id="8_2yns3"]
[ext_resource type="Resource" uid="uid://cbd46riqqh1un" path="res://resources/stickers/some_sticker_2.tres" id="9_ou3y8"]
[ext_resource type="Resource" uid="uid://mh3amykpkeae" path="res://resources/stickers/some_sticker_3.tres" id="10_x5ada"]

[node name="Memory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rwnrf")

[node name="MemoryManager" parent="." node_paths=PackedStringArray("dialog_display", "exit_button") instance=ExtResource("2_37m0f")]
dialog_display = NodePath("../MemoryBackground/DialogDisplayManager")
exit_button = NodePath("../MemoryBackground/ExitButton")

[node name="MemoryBackground" type="TextureRect" parent="."]
z_index = 10
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(1, 0.99700844)
texture = ExtResource("1_7jid2")

[node name="ExitButton" type="Button" parent="MemoryBackground"]
z_index = 50
layout_mode = 0
offset_left = 1805.9999
offset_top = 5.015002
offset_right = 1911.9999
offset_bottom = 59.177036
text = "Exit Memory"

[node name="Fader" parent="MemoryBackground/ExitButton" instance=ExtResource("5_x5ada")]

[node name="DialogDisplayManager" parent="MemoryBackground" node_paths=PackedStringArray("allowed_area") instance=ExtResource("2_hurhv")]
allowed_area = NodePath("ColorRect")
label_prefab = ExtResource("3_7jid2")

[node name="ColorRect" type="ColorRect" parent="MemoryBackground/DialogDisplayManager"]
offset_left = 210.0
offset_top = 29.0
offset_right = 1900.0
offset_bottom = 1052.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="ColorRect" type="ColorRect" parent="MemoryBackground"]
layout_mode = 0
offset_left = -0.99999994
offset_top = 4.0120025
offset_right = 186.99998
offset_bottom = 1083.0059
color = Color(0, 0, 0, 0.39607844)

[node name="ScrollContainer" type="ScrollContainer" parent="MemoryBackground/ColorRect"]
z_index = 20
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StickerScrollbar" type="VBoxContainer" parent="MemoryBackground/ColorRect/ScrollContainer" node_paths=PackedStringArray("sticker_daddy")]
clip_contents = true
custom_minimum_size = Vector2(0, 1080)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cxery")
stciker_resource = Array[ExtResource("3_37m0f")]([ExtResource("8_2yns3"), ExtResource("9_ou3y8"), ExtResource("10_x5ada")])
sticker_prefab = ExtResource("2_hjr63")
sticker_daddy = NodePath("../../..")

[connection signal="pressed" from="MemoryBackground/ExitButton" to="." method="_on_exit_button_pressed"]
